deploy/argocd/manifests/applications/todo-api-swagger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-swagger
  namespace: todo
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: placeholder
  template:
    metadata:
      labels:
        app: placeholder
    spec:
      containers:
        - name: todo-api-swagger
          image: todo-api-swagger
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "256Mi"
