deploy/argocd/manifests/applications/todo-api-swagger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-swagger
  namespace: todo
spec:
  type: ClusterIP
  selector:
    app: todo-api-swagger
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
